JFrame paint artifacts when dragged from standard monitor to HiDPI monitor

XMLWordPrintable

    • 2d
    • b25
    • generic
    • generic

        ADDITIONAL SYSTEM INFORMATION :
        Windows 10 with two monitors set to extend, one set at 100% display scale, the second at 225% scale. Happens in Java 16 and Java 17, does not happen in Java 8.

        A DESCRIPTION OF THE PROBLEM :
        When a JFrame is dragged from a standard dpi monitor (display scale set to 100%) to a HiDPI monitor (display scale set to > 100%, 225% in our testing), the JFrame leaves behind a lot of painting artifacts as it is dragged.

        REGRESSION : Last worked in version 8u291

        STEPS TO FOLLOW TO REPRODUCE THE PROBLEM :
        Create a simple JFrame and set visible.
        Drag the JFrame from one monitor to the other, slowly.

        EXPECTED VERSUS ACTUAL BEHAVIOR :
        EXPECTED -
        No painting artifacts should be visible, the JFrame should remain clean.
        ACTUAL -
        Painting artifacts are visible on the JFrame as it is dragged.

        ---------- BEGIN SOURCE ----------
        public class SimpleFrame extends JFrame
        {
        public static void main(String [] args) throws Exception
        {
        SimpleFrame sf = new SimpleFrame();
        sf.setSize(800, 600);
        sf.setLocationRelativeTo(null);
        sf.setDefaultCloseOperation(EXIT_ON_CLOSE);
        sf.setTitle("Java Version: " + System.getProperty("java.version"));

        sf.setVisible(true);
        }
        }
        ---------- END SOURCE ----------

        FREQUENCY : always


              Assignee:
              Sergey Bylokhov
              Reporter:
              Webbug Group
              Votes:
              0 Vote for this issue
              Watchers:
              13 Start watching this issue

                Created:
                Updated:
                Resolved: