8270874: JFrame paint artifacts when dragged from standard monitor to HiDPI monitor

Backport-of: 03473b4c271b2ec7f0ebdb0edabadf7f36816b9d